Fixed bug with wrong gap in little screens;

--- a/components/article/Article.module.scss
+++ b/components/article/Article.module.scss
@@ -53,6 +53,11 @@
     margin: 0 auto 32px auto;
     aspect-ratio: 3/2;
     min-height: 266px;
+    width: 100%;
+    
+    @include adaptive("mob-m") {
+      max-width: 330px;
+    }
   }
 
   &_word {
