--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -43,6 +43,10 @@ main {
   color: $main_font;
 }
 
+img {
+  width: 280px;
+}
+
 a {
   text-decoration: none;
 }
